# CStructGen

./: .travis.yml  Makefile.am  README.md  configure.ac  pkg.pc.in
examples/adddrop/: AddDrop.h
examples/pair_test/: Makefile.am  Pair.generated.cpp  Pair.generated.h  Pair.h  Pair.hpp  Pair_test.cpp
examples/simple/: Makefile.am  Simple.cpp  Simple.generated.cpp  Simple.generated.h  Simple.h  Simple.xml  Simple.xml-hiera.xml  Simple_test  Simple_test.cpp  Simple_test_2  Simple_test_2.cpp  Simple_test_validation.cpp  jsonxx.cc  jsonxx.h
scripts/: Makefile.am  cast_xml_generate_printers.gsl  cast_xml_generate_printers.gsl.in  gen.sh  gen.sh.in  remove_attributes.xslt
